@@ -11,7 +11,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v22.2.20-cur, done by cs@nop.<br/>
-tested: 2022-02-20 04:46:13, took 00:06:50, with 100 workers, on 2702 cases, 0 failed, 0 traces, 3 retries<br/>
+tested: 2022-02-20 05:03:48, took 00:08:48, with 100 workers, on 2706 cases, 0 failed, 0 traces, 6 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -751,6 +751,10 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/crypt-sgt09.tst">crypt-sgt09.tst</a></td><td>success</td><td>sgt isdn encapsulation</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/crypt-sgt10.tst">crypt-sgt10.tst</a></td><td>success</td><td>sgt sep encapsulation</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/crypt-sgt11.tst">crypt-sgt11.tst</a></td><td>success</td><td>sgt tunnel encapsulation</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/crypt-sgt12.tst">crypt-sgt12.tst</a></td><td>success</td><td>sgt ethernet chain encapsulation</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/crypt-sgt13.tst">crypt-sgt13.tst</a></td><td>success</td><td>sgt vlan chain encapsulation</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/crypt-sgt14.tst">crypt-sgt14.tst</a></td><td>success</td><td>sgt vlan map out encapsulation</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/crypt-sgt15.tst">crypt-sgt15.tst</a></td><td>success</td><td>sgt tunnel map out encapsulation</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/crypt-skip01.tst">crypt-skip01.tst</a></td><td>success</td><td>skip over ipv4</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/crypt-skip02.tst">crypt-skip02.tst</a></td><td>success</td><td>skip over ipv6</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/crypt-skip03.tst">crypt-skip03.tst</a></td><td>success</td><td>skip over skip</td></tr>
